add_library(Dtw SHARED Dtw.cpp)
include_directories(cpp/include)
set(SOURCES cpp/src/ColMajorCell.cpp cpp/src/FastDTW.cpp cpp/src/SearchWindow.cpp cpp/src/WarpPath.cpp)
add_library(fast_dtw SHARED ${SOURCES} )
set_property(TARGET fast_dtw PROPERTY POSITION_INDEPENDENT_CODE ON)
set_property(TARGET Dtw PROPERTY POSITION_INDEPENDENT_CODE ON)
target_link_libraries(Dtw fast_dtw ${TF_LIB_FILE})
file(MAKE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build)
set_target_properties(Dtw PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/build  RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/build)
